manifests/workloads/compliant/restricted-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: restricted-pod
  labels:
    app: kyverno-lab
spec:
  containers:
    - name: nginx
      image: nginx:1.27
      securityContext:
        privileged: false
